fixing the delay when navigating, the problem was a broken transition animation.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Dome9</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css"/>
+    <link rel="stylesheet" href="bower_components/durandal/css/durandal.css" />
+    <link rel="stylesheet" href="css/common.css"/>
 </head>
 <body>
     <div id="applicationHost"></div>
